fix tutor portal cards

--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutor Portal | Peer-2-Peer Pro</title>
     <link rel="stylesheet" href="tutor.css">
-    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/graduation-cap.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src='https://meet.jit.si/external_api.js'></script>
 </head>
@@ -15,7 +15,7 @@
 
     <nav class="glass-nav">
         <div class="logo-container">
-            <img src="https://img.icons8.com/color/48/000000/graduation-cap.png" alt="Logo" class="favicon-img">
+            <link rel="icon" type="image/x-icon" href="/favicon.ico">
             <span class="brand-name">PEER-2-PEER <span class="green-text">PRO</span></span>
         </div>
 
@@ -33,7 +33,7 @@
     <main class="main-panel">
         <div id="mainDashboard">
             <header class="panel-header">
-                <h1>Welcome Back, <span id="welcomeName" class="green-text">Teacher</span></h1>
+                <h1>Welcome Back, <span id="tutorNameDisplay" class="green-text">Teacher</span></h1>
                 <p>Strategic management of your academic sessions and resources.</p>
             </header>
 
@@ -41,7 +41,7 @@
                 <div class="dash-card featured" onclick="showSection('liveOrganizer')">
                     <div class="card-icon"><i class="fas fa-video"></i></div>
                     <h3>Live Class Organiser</h3>
-                    <p>Schedule and launch secure Jitsi video lessons.</p>
+                    <p>Schedule your next online lesson.</p>
                 </div>
 
                 <div class="dash-card" onclick="showSection('resourceSharing')">
@@ -52,14 +52,16 @@
 
                 <div class="dash-card" onclick="showSection('tutorDashboard')">
                     <div class="card-icon"><i class="fas fa-chart-pie"></i></div>
-                    <h3>Analytics</h3>
-                    <p>View student performance data.</p>
+                    <h3>Create Your Own Document</h3>
+                    <p>A teacher that goes the extra mile to bridge the gap between the learner who quickly grasps
+                        concepts and doesn't need extra help and the learner who struggles to keep up with the pace of
+                        the class.</p>
                 </div>
 
                 <div class="dash-card" onclick="showSection('p2pForum')">
                     <div class="card-icon"><i class="fas fa-comments"></i></div>
                     <h3>P2P Forum</h3>
-                    <p>Join community discussions.</p>
+                    <p>Answering a simple question can go a long way in helping a learner.</p>
                 </div>
             </div>
         </div>
